--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -70,23 +70,15 @@ font:
   # The normal (roman) font face to use.
   # Style can be specified to pick a specific face.
   normal:
-    family: "AurulentSansMono Nerd Font"
-    # family: "Fira Code"
-    # family: "Source Code Pro"
-    # style: Retina
+    family: "Source Code Pro"
 
   # The bold font face
   bold:
-    family: "AurulentSansMono Nerd Font"
-    # family: "Fira Code"
-    # family: "Source Code Pro"
+    family: "Source Code Pro"
 
   # The italic font face
   italic:
-    family: "AurulentSansMono Nerd Font"
-    # family: "Fira Code"
-    # family: "Source Code Pro"
-    # style: "Medium Italic"
+    family: "Source Code Pro"
 
   # Point size of the font
   size:  8.0
@@ -101,7 +93,7 @@ font:
   # the default being at the bottom. Increase the x offset to move the glyph to
   # the right, increase the y offset to move the glyph upward.
   glyph_offset:
-    x: 2
+    x: 0
     y: 0
 
   # Thin stroke font rendering (macOS only)
@@ -118,10 +110,10 @@ font:
   #
   # This is a global setting and will require a log out or restart to take
   # effect.
-  use_thin_strokes: true
+  use_thin_strokes: false
 
 # When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: false
+draw_bold_text_with_bright_colors: true
 
 # Use custom cursor colors. If true, display the cursor in the cursor.foreground
 # and cursor.background colors, otherwise invert the colors of the cursor.
@@ -129,31 +121,31 @@ draw_bold_text_with_bright_colors: false
 
 # Colors
 colors:
-  # Nord
+  # Default colors
   primary:
-    background: "0x2E3440"
-    foreground: "0xD8DEE9"
-  cursor:
-    text: "0x2E3440"
-    cursor: "0xD8DEE9"
+    background: '0x000000'
+    foreground: '0xffffff'
+  # Normal colors
   normal:
-    black: "0x3B4252"
-    red: "0xBF616A"
-    green: "0xA3BE8C"
-    yellow: "0xEBCB8B"
-    blue: "0x81A1C1"
-    magenta: "0xB48EAD"
-    cyan: "0x88C0D0"
-    white: "0xE5E9F0"
+    black:   '0x000000'
+    red:     '0xcd0000'
+    green:   '0x00cd00'
+    yellow:  '0xcdcd00'
+    blue:    '0x0000ee'
+    magenta: '0xcd00cd'
+    cyan:    '0x00cdcd'
+    white:   '0xe5e5e5'
+
+  # Bright colors
   bright:
-    black: "0x4C566A"
-    red: "0xBF616A"
-    green: "0xA3BE8C"
-    yellow: "0xEBCB8B"
-    blue: "0x81A1C1"
-    magenta: "0xB48EAD"
-    cyan: "0x8FBCBB"
-    white: "0xECEFF4"
+    black:   '0x7f7f7f'
+    red:     '0xff0000'
+    green:   '0x00ff00'
+    yellow:  '0xffff00'
+    blue:    '0x5c5cff'
+    magenta: '0xff00ff'
+    cyan:    '0x00ffff'
+    white:   '0xffffff'
 
   # Tomorrow Night Bright
   # primary:
