--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,6 @@
 # i3-gaps config
 # the current build I am running :
-#   OS  : Pop_OS
+#   OS  : EndeavourOS
 #   WM  : i3-gaps
 #   BAR : polybar
 # There are features that are commmented out that I do not
@@ -48,7 +48,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id feh --bg-center $HOME/Pictures/background.png
 exec --no-startup-id $HOME/.screenlayout/default.sh
 # exec --no-startup-id xfsettingsd
-exec --no-startup-id discord
+# exec --no-startup-id discord
 
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
 # bindsym Mod1+F1 exec --no-startup-id $HOME/.config/i3/launcher-alt
